# Alfie

./: README.md  generate_prompt.py  pyproject.toml  settings.py
alfie/: attn_processor.py  cross_heatmap.py  generate.py  pipeline_pixart_sigma.py  self_heatmap.py  transformer_2d.py  trimap.py  utils.py
src/alfie/: generate.py  grabcut.py  utils.py
src/alfie/models/: __init__.py  attention_processor.py  cross_heatmap.py  self_heatmap.py
src/alfie/models/transformers/: __init__.py  pixart_transformer_2d.py
src/alfie/pipelines/: __init__.py
src/alfie/pipelines/pixart_alpha/: __init__.py  pipeline_output.py  pipeline_pixart_sigma.py
tests/: pipeline_pixart_sigma_test.py
